fix category selection spacing

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -133,6 +133,7 @@ h2 {
 	}
 
 .input-radio-container {
+	margin-bottom: 0 !important;
 }
 
 	.input-radio {
